--- a/vue-instance.html
+++ b/vue-instance.html
@@ -12,17 +12,85 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
 <body>
+    <script type="text/x-template" id="productForm">
+            <form id="form1">  
+                <div class="row">
+                    <div class="col-md-6"> 
+                        <div class="form-group">
+                            <label for="productName">Product Name</label>
+                            <input type="text" v-model="form.name" class="form-control" id="productName" placeholder="Product Name">
+                        </div>
+                        <div class="form-group">
+                            <label for="productQuantity">Product Quantity</label>
+                            <input type="text" v-model="form.quantity" class="form-control" id="productQuantity" placeholder="Product Quantity">
+                        </div>
+                        <div class="form-group">
+                        <label for="productPrice">Product Price</label>
+                        <input type="text" v-model="form.price" class="form-control" id="productPrice" placeholder="Product Price">
+                        </div>
+                        <button type="button" @click="addProduct" class="btn btn-primary">ADD PRODUCT</button>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="productImage">Product Image</label>
+                            <input type="file" @change="onChange" class="form-control" id="productImage" placeholder="Product Image">
+                        </div>
+                        <hr>
+                        <img :src="form.imagePath" width="450px" height="140px" >
+                    </div>
+                </div>
+            </form>
+    </script>
 
-    <div id="vm1">
-        <p> {{hello}} </p>
-        <button @click="clicked" ref="myButton" class="btn btn-success">{{hello}}</button>
-        <button @click="clicked2"  class="btn btn-success">{{hello}}</button>
-        <comp></comp>
-    </div>
-    <div id="vm2">
-       {{hello}}
+    <script type="text/x-template" id="progressBar">
+        <div class="row" v-if="count > 0">
+            <div class="col-md-12">
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" :style="{width: (count * 10 )+'%'}" aria-valuemax="100"></div>
+                </div>
+            </div>
+        </div>
+    </script>
+
+    <script type="text/x-template" id="productList">
+        <div class="row" v-if="productList.length > 0">
+            <div class="col-md-12"> 
+                <table class="table">
+                    <thead class="thead-dark">
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Product Image</th>
+                        <th scope="col">Product Name</th>
+                        <th scope="col">Product Price</th>
+                        <th scope="col">Product Quantity</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr v-for="(product, index) in productList">
+                        <th scope="row">{{index+1}}</th>
+                        <td><img :src="product.imagePath" class="mr-3" :alt="product.name" width="100px" height="100px"></td>
+                        <td>{{product.name}}</td>
+                        <td>{{product.price}}</td>
+                        <td>{{product.quantity}}</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+    </script>
+
+
+    <div id="app">
+        <div class="container">
+            <product-form></product-form>
+            <hr v-if="show">
+            <progress-bar></progress-bar>
+            <hr v-if="show">
+            <product-list></product-list>
+        </div>
     </div>
 
+   
 <script src="vue-instance.js"></script>
 </body>
 </html>
